--- a/Jogo_da_Forca/CSS/styles.css
+++ b/Jogo_da_Forca/CSS/styles.css
@@ -17,18 +17,21 @@ body{
     font-size: 3em;
 }
 
-.area-imagem{
-    float: left;
-    border: 4px solid white;
-    margin-left: 5vw;
+.secao-imagem{
+    max-width: 30vw;
+    min-width: 20vw;
+    margin: 0 auto;
+}
+
+.imagem-forca{
+    border: 2px solid white;
+    width: 100%;
 }
 
 .secao-dica{
-    border: 5px dashed #53b4ae;
+    border: 5px dashed rgb(68, 224, 214);
     width: 30vw;
     margin: 0 auto;
-    /* position: relative;
-    left: 10vw; */
     padding: 10px 15px;
 }
 
@@ -43,10 +46,32 @@ body{
     color: #DEA435;
 }
 
+@media (max-width: 768px){
+    .secao-dica{
+        margin: 5vh auto;
+        width: 40vw;
+    }
+}
+
 .secao-letras-palavra{
-    margin: 20vh 0 10vh 0;
-    position: relative;
-    clear: both;
+    margin: 10vh auto;
+}
+
+.caixa-letra{
+    border: 2px solid white;
+    width: fit-content;
+    padding: 20px 3vw;
+    margin: 0 auto;
+}
+
+@media(max-width: 1110px){
+    .caixa-letra{
+        padding: 20px 2vw;
+    }
+}
+
+.caixa-letra p{
+    font-size: 1.3em;
 }
 
 .instrucao h2{
@@ -56,27 +81,19 @@ body{
 }
 
 .teclado-virtual{
-    margin: 8vh 0;
-}
-
-.caixa-letra{
-    display: inline-block;
-    width: 8vw;
-    line-height: 12vh;
-    border: 3px solid white;
-    margin: 0 5px;
-}
-
-.caixa-letra p{
-    font-size: 1.3em;
+    margin: 5vh 0;
 }
 
 .botao-letra{
     border: 2px solid white;
     padding: 10px;
-    width: 2vw;
+    width: 5vw;
     display: inline-block;
     margin: 5px 3px;
+}
+
+.botao-letra:hover{
+    background-color: rgb(11, 68, 63);
 }
 
 
