--- a/Jogo_da_Velha/CSS/styles.css
+++ b/Jogo_da_Velha/CSS/styles.css
@@ -5,6 +5,8 @@
 
 body{
     text-align: center;
+    background-image: linear-gradient(rgba(5,8,96,1), rgb(89, 194, 255));
+    color: white;
 }
 
 h1{
@@ -21,23 +23,24 @@ h1{
 }
 
 span{
-    color: rgb(34, 34, 134);
+    color: rgb(122, 180, 255);
+    font-style: italic;
 }
 
 .tabuleiro{
     background-color: rgb(119, 166, 253);
-    border: 4px solid rgb(65, 11, 126);
+    border: 4px solid rgb(55, 8, 109);
     width: fit-content;
     margin: 5vh auto;
 }
 
 .linha{
-    border-bottom: 2px solid rgb(65, 11, 126);
+    border-bottom: 2px solid rgb(55, 8, 109);
 }
 
 .casa-tabuleiro{
     display: inline-block;
-    border-right: 2px solid rgb(65, 11, 126);
+    border-right: 2px solid rgb(55, 8, 109);
     line-height: 15vh;
     height: 15vh;
     padding: 20px;
