--- a/Jogo_da_Velha/CSS/styles.css
+++ b/Jogo_da_Velha/CSS/styles.css
@@ -7,11 +7,13 @@ body{
     text-align: center;
     background-image: linear-gradient(rgba(5,8,96,1), rgb(89, 194, 255));
     color: white;
+    font-family: 'Overpass', sans-serif;
 }
 
 h1{
     margin: 5vh 0;
     font-size: 2.3em;
+    font-family: 'Jura', sans-serif;
 }
 
 .mostra-nome-jogador{
@@ -20,11 +22,13 @@ h1{
 
 .mostra-nome-jogador h4{
     font-size: 1.5em;
+    font-weight: 400;
 }
 
 span{
     color: rgb(122, 180, 255);
     font-style: italic;
+    font-weight: 300;
 }
 
 .tabuleiro{
