--- a/Jogo_da_Velha/CSS/styles.css
+++ b/Jogo_da_Velha/CSS/styles.css
@@ -23,12 +23,15 @@ h1{
 .mostra-nome-jogador h4{
     font-size: 1.5em;
     font-weight: 400;
+    display: inline-block;
 }
 
-span{
+.mostra-nome-jogador p{
     color: rgb(122, 180, 255);
+    font-size: 1.5em;
     font-style: italic;
     font-weight: 300;
+    display: inline-block;
 }
 
 .tabuleiro{
